// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<nav
  className="navbar navbar-dark bg-dark navbar-expand-lg border-bottom-3 shadow "
>
  <div
    className="collpase navbar-collapse"
  >
    <ul
      className="navbar-nav mr-auto mt-2"
    >
      <li
        className="navbar-item"
      >
        <div
          className="brand-link"
        >
          <img
            alt="notebook icon"
            className="branding-image"
            src="test-file-stub"
          />
           
           
          <a
            className="navbar-brand link-underline-light link-underline-opacity-100-hover"
            href="/"
          >
            Notezy
          </a>
        </div>
      </li>
      <li
        className="navbar-item"
      >
        <a
          className="nav-link active link-underline-light link-underline-opacity-100-hover"
          href="/createanote"
        >
           Create a note
        </a>
      </li>
      <li
        className="navbar-item"
      >
        <a
          className="nav-link link-underline-light link-underline-opacity-100-hover"
          href="/yournotes"
        >
          Your notes
        </a>
      </li>
    </ul>
  </div>
  <div
    className="greeting-container"
  >
    <div
      className="Loader"
    >
      Loading your greeting...
    </div>
    <div
      className="text-center p-5 mx-auto border-0 login"
    >
      <h2
        className="container w-100 mt-5 mx-auto text-center "
      >
        Getting your page...
      </h2>
    </div>
    <div
      className="footer text-dark mt-2"
    >
      <h6>
        authored by
         
        <span>
          <a
            className="footer-link badge badge-light"
            href="https://www.corianoharris.com"
          >
            Coriano Harris
          </a>
        </span>
      </h6>
    </div>
  </div>
</nav>
`;

exports[`renders correctly 2`] = `
Array [
  <div
    className="text-center p-5 mx-auto border-0 login"
  >
    <h2
      className="container w-100 mt-5 mx-auto text-center "
    >
      Getting your page...
    </h2>
  </div>,
  <div
    className="footer text-dark mt-2"
  >
    <h6>
      authored by
       
      <span>
        <a
          className="footer-link badge badge-light"
          href="https://www.corianoharris.com"
        >
          Coriano Harris
        </a>
      </span>
    </h6>
  </div>,
]
`;
